Add About page with details on how to upgrade

--- a/views/index.html
+++ b/views/index.html
@@ -18,6 +18,7 @@
       <?!= include('views/partials/bas'); ?>
       <?!= include('views/partials/annualviews'); ?>
       <?!= include('views/partials/settings'); ?>
+      <?!= include('views/partials/about'); ?>
     </main>
     <?!= include('views/partials/scripts'); ?>
   </body>
