--- a/views/partials/navbar.html
+++ b/views/partials/navbar.html
@@ -17,6 +17,7 @@
         <button class="ghost" id="nav-bas" style="display:none;">BAS Reporting</button>
         <button class="ghost" id="nav-invoices" style="display:none;">Invoices</button>
         <button class="ghost" id="nav-settings">Settings</button>
+        <button class="ghost" id="nav-about">About</button>
       </div>
     </div>
   </div>
